# gill

./: .gitignore  MAINTAINERS.md  PR_BODY.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.changeset/: angry-comics-reflect.md  brown-crabs-film.md  chilly-sloths-reply.md  config.json  dry-pants-begin.md  fix-react-hooks-enabled-field.md  gold-chicken-rhyme.md  honest-lobsters-relate.md  khaki-bananas-hammer.md  new-planets-tickle.md  poor-foxes-shake.md  pretty-moles-speak.md  silent-peaches-pay.md  slow-ants-wash.md  spicy-gifts-laugh.md  spotty-sloths-wonder.md  tame-lions-invent.md  tasty-rice-study.md  tender-terms-repeat.md  thick-paws-sleep.md  twenty-suns-mix.md  unlucky-knives-sleep.md  weak-wolves-destroy.md  witty-bats-grab.md
.github/workflows/: preview-docs.yml  publish-canary-releases.yml  publish-packages.yml  pull-requests.yml
docs/: eslint.config.mjs  package.json  pnpm-lock.yaml  source.config.ts  typedoc-data.mjs
examples/codama/: README.md  codama.json  package-lock.json  package.json
examples/codama/program/: Cargo.toml
examples/codama/program/src/: lib.rs
examples/codama/program/src/instructions/: instructions.rs  make.rs  take.rs
examples/escrow-gill-anchor-codama/: package.json
examples/example_escrow/: .prettierignore  Anchor.toml  codama.js  package.json  tsconfig.json
examples/get-started/: README.md  package.json
examples/magicblock/: .gitignore  README.md  codama.js  package.json
examples/react/: eslint.config.js  (+5 more)
examples/react-app/: README.md  package.json  vite.config.ts
(+77 files in other folders)
